style: :lipstick: fix ios double scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,2 +1,5 @@
 @tailwind utilities;
 
+html, body {
+  overflow: hidden; 
+}
